Fix bug on buttons Clean up app comments no needed Downgrade users system Reset password system

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,6 +1,6 @@
 body
 {
-  margin-top: 150px;
+  margin-top: 30px;
   /*overflow: auto;*/
 }
 
@@ -44,9 +44,11 @@ body
   margin-left: 15px;
 }
 
-.author_com
+.hr_separator
 {
-
+   padding:2px;
+   background:#18BC9C;
+   border:0;
 }
 
 .content_com
@@ -66,40 +68,12 @@ body
 	padding-top: 15px;
 }
 
-/*#alink
+/*div a.close:active
 {
-	color: white !important;
+  display: none;
 }*/
 
-/*td
-{
-  padding: 3px;
-}
-
-table, td, th
-{
-	color: white;
-	border: 1px solid black;
-}
-
-table, th
-{
-	margin:auto;
-	text-align: center;
-	border-collapse: collapse;
-}
-
-table, th
-{
-	border: 3px solid black;
-}
-
-td
-{
-  padding: 3px;
-}*/
-
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   #registerIconBar
   {
   	height: 40px;
@@ -110,5 +84,11 @@ td
   #registerIcon
   {
   	margin: 0px;
+  }
+}
+
+  @media (max-width: 425px) {
+  .smallScreen {
+    display: none;
   }
 }
