--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,6 +1,6 @@
 body
 {
-  margin-top: 220px;
+  margin-top: 130px;
   /*overflow: auto;*/
 }
 
@@ -67,6 +67,11 @@ body
 {
 	padding-top: 15px;
 }
+
+/*div a.close:active
+{
+  display: none;
+}*/
 
 @media (max-width: 768px) {
   #registerIconBar
